--- a/src/main/resources/templates/booklist.html
+++ b/src/main/resources/templates/booklist.html
@@ -6,14 +6,15 @@
 </head>
 <body>
 	<h1>Books</h1>
-	<table>
+	<table class="table table-striped">
 		<tr th:each="book: ${books}">
 			<td th:text="${book.title}"></td>
 			<td th:text="${book.author}"></td> 
 			<td th:text="${book.year}"></td>  
 			<td th:text="${book.isbn}"></td>  
 			<td th:text="${book.price}" ></td>
-			<td><a th:href="@{/delete/{id}(id=${book.id})}">Delete</a></td> 
+			<td><a th:href="@{/delete/{id}(id=${book.id})}">Delete</a></td>
+			<td><a th:href="@{/edit/{id}(id=${book.id})}">Edit</a></td>
 		</tr>
 	</table>
 	<a href="/add">Add Book</a>
