--- a/src/main/resources/templates/editbook.html
+++ b/src/main/resources/templates/editbook.html
@@ -12,7 +12,15 @@
 		<input type="text" th:field="*{year}" />
 		<input type="text" th:field="*{isbn}" />
 		<input type="text" th:field="*{price}" />
+		
+		<label for="Catlist">Category</label>
+			<select id="Catlist" th:field="*{category}" class="form-control">
+				<option th:each="category: ${categorys}"
+						th:value="${category.categoryid}"
+							th:text="${category.name}"></option>
+			</select>
 		<input type="submit" class="btn btn-success" value="Save"></input>
 	</form>
 </body>
 </html>
+		
