--- a/src/main/resources/templates/booklist.html
+++ b/src/main/resources/templates/booklist.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"  xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>BookList</title>
 </head>
 <body>
 	<h1>Books</h1>
+	<h2 th:inline="text">Hello [[${#httpServletRequest.remoteUser}]]!</h2>
 	<table class="table table-striped">
 		<tr th:each="book: ${books}">
 			<td th:text="${book.title}"></td>
@@ -14,10 +15,13 @@
 			<td th:text="${book.isbn}"></td>  
 			<td th:text="${book.price}" ></td>
 			<td th:text="${book.category.name}"></td>
-			<td><a th:href="@{/delete/{id}(id=${book.id})}">Delete</a></td>
+			<td sec:authorize="hasRole('ADMIN')"><a th:href="@{/delete/{id}(id=${book.id})}" class="btn btn-danger">Delete</a></td>
 			<td><a th:href="@{/edit/{id}(id=${book.id})}">Edit</a></td>
 		</tr>
 	</table>
 	<a href="/add">Add Book</a>
+	<form th:action="@{/logout}" method="post">
+		<input type="submit" value="Sign out"/>
+	</form>
 </body>
 </html>
