--- a/src/main/resources/templates/booklist.html
+++ b/src/main/resources/templates/booklist.html
@@ -7,7 +7,7 @@
 <body>
 	<h1>Books</h1>
 	<h2 th:inline="text">Hello [[${#httpServletRequest.remoteUser}]]!</h2>
-	<table class="table table-striped">
+	<table>
 		<tr th:each="book: ${books}">
 			<td th:text="${book.title}"></td>
 			<td th:text="${book.author}"></td> 
